# 492-project

./: CHANGELOG.md  Header.hs  Interpreter.hs  Main.hs  README.md  Test.hs  tartlet.hs  x492-project.cabal
app/: Main.hs
src/: Eval.hs  Lang.hs  Norm.hs  Parse.hs  Top.hs  Type.hs
src/util/: Stack.hs
test/: Test.hs
