cabal-version:      2.4
name:               x492-project
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Patrick Yevych
maintainer:         patrick.yevych@mail.utoronto.ca

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable x492-project
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Eval Lang Norm Type Top

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    containers, base ^>=4.14.3.0
    hs-source-dirs:   app src
    default-language: Haskell2010
